@@ -1,5 +1,8 @@
 2005-02-27  Erez Zadok  <ezk@cs.sunysb.edu>
 
+	* hlfsd/hlfsd.c (reaper, cleanup): don't use exit(3) in a signal
+	handler, but use _exit(2) instead.
+
 	* amd/amd.c (parent_exit): This signal handler is called during
 	Amd initialization.  The parent forks a child to do all the hard
 	automounting work, and waits for a SIGQUIT signal from the child.
